--- a/gb/24/12/10/n14387643.md
+++ b/gb/24/12/10/n14387643.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>云林家扶55周年庆园游会  近4000位亲子齐聚同乐</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/12/id14387646-729725-600x400.jpg" />
-<h6>县长张丽善以个人名义赞助10万元。（云林县政府提供）
-</h6>
+<h6>县长张丽善以个人名义赞助10万元。（云林县政府提供）</h6>
 <hr>
 <p>【大纪元2024年12月10日讯】（大纪元记者廖素贞台湾云林报导）云林家扶欢庆55周年园游会，今(8)日上午于虎尾农博园区展开，县长张丽善一早到场与家扶的亲子们一起散放幸福，更以个人名义赞助10万元，并感谢社会善心企业及人士对家扶与弱势的扶持。</p>
 <p>活动除颁发感谢状予赞助单位外，县长张丽善与家扶副主委吴裕田共同颁发自强家庭奖牌，肯定17位坚忍持家的家长。家长们的工作类别有剖蚵、司机、照服员、面店热炒店零工、工厂临时工、清洁工、农杂工、油漆工甚至庙会殡葬业工作，他们辛勤养家照顾好家人，坚忍勤奋，足堪表率。家扶陈灿勲主委并致赠每户壹万元奖励金，期许朝自立脱贫迈进。</p>
@@ -19,42 +18,33 @@
 <p>云林家扶廖志文主任表示，今天有多达60个爱心摊位，让服务家庭的大人小孩，有吃有喝又有玩，还带着满满民众爱心的民生物回家，迎接新年的到来，真的很开心。</p>
 <p>责任编辑：杜文卿</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/26/n13674684.md#1">嘉义女中创校100周年校庆园游会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/17/n14118393.md#1">达拉斯地区节假日滑冰最佳去处</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/29/n14126685.md#1">新泽西 12 月精彩节日庆典活动一览表</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386176.md#1">寇顿众议员与庄文怡市议员举办玩具捐赠活动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/5/n13418300.md#1">岁末送暖 云林家扶近千户家庭温馨迎新年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/30/n14006653.md#1">公益平台“驿起响爱”10周年 邀大家一起响爱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/20/n14120345.md#1">云林家扶岁末送暖告急 福德巧新首发20万元响应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/25/n14124006.md#1">心传爱关怀协会 以精彩表演 带给弱势家庭欢乐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260138.md#1">“驿起响爱公益园游会”邀您6月8日一起响爱来+1</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14309852.md#1">行善最乐 张金钟夫妇携手全家一起做公益</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/20/n14374814.md#1">四家企业率先捐款 邀大家响应家扶岁末送暖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387578.md#1">2025元旦跨年  林铁观日列车12月10日起预售</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387498.md#1">触口教育中心 极限节能灶 国产材树屋启用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387454.md#1">茑松艺术高中创校50年庆 期许以四大目标 迈向下个50年高逢</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651258.md#1">大华府急难救助协会举办防诈讲座　提升侨胞识诈能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646219.md#1">2026年侨务委员会海外青年语文研习班开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637130.md#1">2025大华府地区华语文推广重点聚落研讨会 隆重登场 圆满举行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637123.md#1">华府民俗文化种子教师研习3D果冻艺术创作</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/6/n10619679.md#1" target="_blank">林辉：教授从练习低头弯腰到乐极生悲</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/9/25/n4257161.md#1" target="_blank">慧真：世纪谎言  自焚伪案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/2/n11084381.md#1" target="_blank">林辉：中共这些“特别党员”效力后自取其辱</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/15/n3683727.md#1" target="_blank">历史回顾：公安部给李洪志先生的感谢信</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383823.md#1">《我的爱，我的新娘》：笑中带泪的婚姻生活</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386541.md#1">格鲁吉亚发现神秘石板 或蕴含失落语言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/8/n10769948.md#1">北宋第一神箭手何灌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/2/n14383095.md#1">【未解之谜】南极的秘密 上古文明的真相？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386112.md#1">【未解之谜】用DNA谱曲？遗传学中隐藏生命密码</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386576.md#1">【时事金扫描】反抗军攻叙首都 川普泄俄军机密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386571.md#1">【菁英论坛】韩国“总统魔咒” 中共鬼影重重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/30/n13684535.md#1">【传统音乐】传统文化与音乐 第四集</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14386798.md#1">援乌韩国士兵劝援俄朝鲜“兄弟”投降</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386560.md#1">56岁伊能静大方认老 自拍戴老花镜补妆获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386568.md#1">台网红发纪录片揭中共统战 逾百万人观看</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386564.md#1">揭中共统战黑幕 台湾歌手陈柏源发不自杀声明</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386152.md#1">演艺圈名人接连离世 命理师唐绮阳发文警示</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386105.md#1">琼瑶离世 于正抄袭道歉信悄然消失引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386577.md#1">迈克尔·杰克逊爱女宣布订婚 男方身份曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387333.md#1">塑胶微粒无所不在 3成来自这个被忽略的来源</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14386747.md#1">【旅行趣】风车下的惊喜：爱上“王功”的理由</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386043.md#1">咖啡渣别急着丢 吸湿除臭超有效！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383211.md#1">食道癌初期难察觉 教你用饮食降低患癌风险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386019.md#1">无论是否做运动 久坐都会增加患心脏病的风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/10/n14387643.htm">云林家扶55周年庆园游会  近4000位亲子齐聚同乐</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387643.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
